--- a/web1/src/app/admin/recycle/recycle.component.css
+++ b/web1/src/app/admin/recycle/recycle.component.css
@@ -20,6 +20,12 @@
 .card-E table tr th{
     padding: 1% 0;
 }
+.card-E table tr td{
+    text-align: right;
+    padding-right: 15px;
+    color: red;
+    font-weight: bolder;
+}
 .card-E button {
     background: none;
     border: none;
@@ -36,6 +42,13 @@
 .card-E i:hover {
 
     transform: scale(1.1);
+}
+.h1-heading-list{
+    color: #ffffff;
+    font-weight: 600;
+    background: #1e2672;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 .list-Table{
     width: 100%;
