--- a/web1/src/app/admin/recycle/recycle.component.css
+++ b/web1/src/app/admin/recycle/recycle.component.css
@@ -77,3 +77,13 @@
     box-shadow: 0px 0px 5px 1px #0000003b;
     border-radius: 5px;
   }
+
+
+  @media only screen and (max-width: 512px) and (min-width: 300px){
+    .card-E{
+      
+        width: 90% !important;
+        margin: 5%;
+
+    }
+  }
